[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "biosentinel"
version = "2.1.0"
description = "AI-powered longitudinal health monitoring and early disease prediction platform"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mohit Chaprana", email = "mohit@liveupx.com"},
    {name = "Liveupx Pvt. Ltd.", email = "biosentinel@liveupx.com"},
]
keywords = [
    "healthcare", "ai", "machine-learning", "cancer-detection",
    "disease-prediction", "ehr", "fhir", "longitudinal-health",
    "early-detection", "clinical-decision-support"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "python-multipart==0.0.9",
    "pydantic==2.6.3",
    "sqlalchemy==2.0.28",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "scikit-learn==1.4.1",
    "numpy==1.26.4",
    "shap>=0.45.0",
    "cryptography>=42.0.0",
    "structlog>=24.0.0",
    "fpdf2>=2.7.9",
    "pdfplumber==0.11.0",
    "pytesseract==0.3.10",
    "Pillow==10.3.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    "slowapi>=0.1.9",
    "twilio>=8.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/liveupx/biosentinel"
Repository = "https://github.com/liveupx/biosentinel"
Documentation = "https://github.com/liveupx/biosentinel#readme"
"Bug Tracker" = "https://github.com/liveupx/biosentinel/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -q"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
